@@ -28,6 +28,9 @@ $ENV{PERL5LIB} = join(':', "${ROOT_DIR}/lib", (grep { defined } $ENV{PERL5LIB}))
 $ENV{DH_AUTOSCRIPTDIR} = "$ROOT_DIR/autoscripts";
 # Nothing in the tests requires root.
 $ENV{DEB_RULES_REQUIRES_ROOT} = 'no';
+# Disable colors for good measure
+$ENV{DH_COLORS} = 'no';
+$ENV{DPKG_COLORS} = 'no';
 
 # Drop DEB_BUILD_PROFILES and DEB_BUILD_OPTIONS so they don't interfere
 delete($ENV{DEB_BUILD_PROFILES});
