@@ -27,6 +27,13 @@ debhelper (12.8) UNRELEASED; urgency=medium
   * dh_installsystemd: In compat 13, this command will no
     longer manage tmpfiles.d configuration.
   * dh: Run dh_installtmpfiles by default in compat 13.
+  * Dh_Lib.pm: Emit "error" and "warning" with error and
+    warning messages.  Thanks to Paul Wise for the
+    suggestion.  (Closes: #906723)
+  * Dh_Lib.pm: Support colored output for warnings and
+    errors (enabled by default).  The colors can be
+    controlled by setting DH_COLORS or DPKG_COLORS.  The
+    latter will also affect dpkg-related tools.
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
